tests/machine/x/cpp/order_by_map.error
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp:14:42: error: ‘x’ was not declared in this scope
   14 |     std::vector<std::pair<Data, decltype(x)>> __items;
      |                                          ^
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp:14:33: error: template argument 2 is invalid
   14 |     std::vector<std::pair<Data, decltype(x)>> __items;
      |                                 ^~~~~~~~~~~
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp:14:44: error: template argument 1 is invalid
   14 |     std::vector<std::pair<Data, decltype(x)>> __items;
      |                                            ^~
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp:14:44: error: template argument 2 is invalid
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp:16:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   16 |       __items.push_back({Data{x.a, x.b}, x});
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp:18:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
   18 |     std::sort(__items.begin(), __items.end(), [](auto &a, auto &b) {
      |                       ^~~~~
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp:18:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
   18 |     std::sort(__items.begin(), __items.end(), [](auto &a, auto &b) {
      |                                        ^~~
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp:21:28: error: template argument 1 is invalid
   21 |     std::vector<decltype(x)> __res;
      |                            ^
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp:21:28: error: template argument 2 is invalid
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp:22:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
   22 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp:3:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp:22:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
   22 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp:23:13: error: request for member ‘push_back’ in ‘__res’, which is of non-class type ‘int’
   23 |       __res.push_back(p.second);
      |             ^~~~~~~~~
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp:26:33: error: request for member ‘size’ in ‘sorted’, which is of non-class type ‘int’
   26 |   for (size_t i = 0; i < sorted.size(); ++i) {
      |                                 ^~~~
/tmp/TestCPPCompiler_VMValid_Goldenorder_by_map3551024615/001/prog.cpp:29:24: error: invalid types ‘int[size_t {aka long unsigned int}]’ for array subscript
   29 |     std::cout << sorted[i];
      |                        ^
