tests/machine/x/cpp/order_by_map.cpp
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <algorithm>
#include <iostream>
#include <utility>
#include <vector>

struct Data {
  int a;
  int b;
};
int main() {
  std::vector<Data> data = {Data{1, 2}, Data{1, 1}, Data{0, 5}};
  auto sorted = ([&]() {
    std::vector<std::pair<Data, decltype(x)>> __items;
    for (auto x : data) {
      __items.push_back({Data{x.a, x.b}, x});
    }
    std::sort(__items.begin(), __items.end(), [](auto &a, auto &b) {
      return std::tie(a.first.a, a.first.b) < std::tie(b.first.a, b.first.b);
    });
    std::vector<decltype(x)> __res;
    for (auto &p : __items)
      __res.push_back(p.second);
    return __res;
  })();
  for (size_t i = 0; i < sorted.size(); ++i) {
    if (i)
      std::cout << ' ';
    std::cout << sorted[i];
  }
  return 0;
}
